--- a/plugin.xml
+++ b/plugin.xml
@@ -32,9 +32,8 @@
       <feature name="OSBarcode">
         <param name="ios-package" value="OSBarcode"/>
       </feature>
+      <preference name="SwiftVersion" value="5" />
     </config-file>
-
-    <dependency id="cordova-plugin-add-swift-support" url="https://github.com/OutSystems/cordova-plugin-add-swift-support.git#2.0.3-OS1"/>
 
     <preference name="CAMERA_USAGE_DESCRIPTION" default=" " />
     <config-file target="*-Info.plist" parent="NSCameraUsageDescription">
