--- a/src/android/com/outsystems/plugins/barcode/build.gradle
+++ b/src/android/com/outsystems/plugins/barcode/build.gradle
@@ -38,10 +38,10 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.3'
 
     implementation 'com.google.zxing:core:3.4.1'
-    implementation 'com.google.mlkit:barcode-scanning:17.2.0'
-    implementation "androidx.camera:camera-camera2:1.3.0"
-    implementation "androidx.camera:camera-lifecycle:1.0.2"
-    implementation "androidx.camera:camera-view:1.0.0-alpha31"
+    implementation 'com.google.mlkit:barcode-scanning:17.3.0'
+    implementation "androidx.camera:camera-camera2:1.4.0"
+    implementation "androidx.camera:camera-lifecycle:1.4.0"
+    implementation "androidx.camera:camera-view:1.4.0"
     implementation "androidx.activity:activity-compose:1.4.0"
     implementation 'androidx.compose.material3:material3:1.0.0'
     implementation 'androidx.compose.material3:material3-window-size-class:1.0.0'
